2025-01-13 keyboard with accessoryview fix
2024-12-07 chat view
2024-12-03 list of chats
2024-11-03 start of develop