@@ -1,3 +1,4 @@
+2025-01-28 full-sized photos in chats 
 2025-01-13 keyboard with accessoryview fix
 2024-12-07 chat view
 2024-12-03 list of chats
